<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/colorPrimary"
    tools:context=".fragments.AboutFragment">


    <ImageView
        android:id="@+id/imageView3"
        android:layout_width="192dp"
        android:layout_height="144dp"
        android:src="@drawable/ic_launcher"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.0" />

    <TextView
        android:id="@+id/AboutTitle"
        android:layout_width="198dp"
        android:layout_height="43dp"
        android:text="@string/app_name"
        android:textAlignment="center"
        android:textColor="#FFFFFF"
        android:textSize="28dp"
        android:textStyle="bold"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.497"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/imageView3"
        app:layout_constraintVertical_bias="0.0" />

    <TextView
        android:id="@+id/AboutApp1"
        android:layout_width="368dp"
        android:layout_height="225dp"
        android:text="@string/about_app1"
        android:textAlignment="center"
        android:textColor="#FFFFFF"
        android:textSize="14dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.496"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/AboutTitle"
        app:layout_constraintVertical_bias="0.0" />

    <ImageView
        android:id="@+id/CreatorPic"
        android:layout_width="136dp"
        android:layout_height="99dp"
        android:src="@drawable/ic_profilepic"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.498"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/AboutApp1" />

    <TextView
        android:id="@+id/AboutApp2"
        android:layout_width="308dp"
        android:layout_height="104dp"
        android:text="@string/about_app2"
        android:textAlignment="center"
        android:textColor="#FFFFFF"
        android:textSize="14dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.495"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/CreatorPic"
        app:layout_constraintVertical_bias="0.155" />


</androidx.constraintlayout.widget.ConstraintLayout>